src/user-java/deploy/user-java-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-java-ingress
  namespace: tripinsights-api
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      - path: /api/user-java
        pathType: Prefix
        backend:
          service:
            name: user-java
            port:
              number: 8080
      - path: /api/docs/user-java
        pathType: Prefix
        backend:
          service:
            name: user-java
            port:
              number: 8080
